# genetrail_ai

./: api.py  cbioportal_search.py  civic_search.py  clinicaltrails_search.py  control_stats.py  drug_search.py  feasibility_summary.py  feedback_store.py  main.py  oncokb_search.py  package-lock.json  posthog-setup-report.md  pyproject.toml  search_depmap.py  vicc_search.py
.github/workflows/: deploy.yml
database/: export_nsclc_control_stats.py  init_user_feedback_table.py  load_depmap_to_neon.py  load_nsclc_clinical_to_neon.py  load_nsclc_patient_metadata_to_neon.py  load_nsclc_to_neon.py  mysql_dump_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  TrialSitesMap.jsx  index.css  main.jsx  posthog.js
resources/: control.csv
