[tool.poetry]
name = "genetrail-ai"
version = "0.1.0"
description = "Clinical trial eligibility extraction with OpenAI"
authors = ["Qi Wang <qi@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
requests = "^2.32.0"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
posthog = "^7.19.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
